New command defining format, minor improvements
- If the second address is empty, it is assumed to be `.`
- Regex addresses and `:substitute` now integrate with search history and
  respect case sensitivity settings
- Patterns for `:substitute` can't be delimited by
- `:set` now supports inverting options using `:set inv{option}` and
  `:set {option}!`
- New commands: `:new`, `:vnew`, `:exit`, `:xall`, `:wall`, `:qall`, `:update`

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ex-mode": {
       "description": "Ex commands",
       "versions": {
-        "0.20.0": "provideEx"
+        "0.20.0": "provideEx_0_20",
+        "0.30.0": "provideEx_0_30"
       }
     }
   },
