--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "atom": ">=0.200.0 <2.0.0"
   },
   "dependencies": {
-    "underscore-plus": "1.x",
-    "event-kit": "^0.7.2",
-    "space-pen": "^5.1.1",
     "atom-space-pen-views": "^2.0.4",
-    "fs-plus": "^2.2.8"
+    "bluebird": "^3.4.1",
+    "event-kit": "^0.7.2",
+    "fs-plus": "^2.2.8",
+    "space-pen": "^5.1.1",
+    "underscore-plus": "1.x"
   },
   "consumedServices": {
     "vim-mode": {
