test package.json change.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "consumedServices": {
     "vim-mode": {
       "versions": {
+        "^0.1.0": "_consumeVim"
+      }
+    },
+    "vim-mode-plus": {
+      "versions": {
         "^0.1.0": "consumeVim"
       }
     }
