--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,45 @@
-language: objective-c
+## Project specific config ###
+language: generic
+
 env:
-    - APM_TEST_PACKAGES="vim-mode"
+  global:
+    - APM_TEST_PACKAGES="vim-mode-plus"
+    - ATOM_LINT_WITH_BUNDLED_NODE="true"
+
+  matrix:
+    - ATOM_CHANNEL=stable
+    - ATOM_CHANNEL=beta
+
+os:
+  - linux
+
+dist: trusty
+
+### Generic setup follows ###
+script:
+  - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
+  - chmod u+x build-package.sh
+  - ./build-package.sh
 
 notifications:
   email:
     on_success: never
     on_failure: change
 
-script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+branches:
+  only:
+    - master
 
 git:
   depth: 10
+
+sudo: false
+
+addons:
+  apt:
+    packages:
+    - build-essential
+    - git
+    - libgnome-keyring-dev
+    - libsecret-1-dev
+    - fakeroot
