--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: objective-c
 
+env:
+  global:
+    - APM_TEST_PACKAGES="vim-mode-plus"
+    - ATOM_LINT_WITH_BUNDLED_NODE="true"
+
+  matrix:
+    - ATOM_CHANNEL=stable
+    - ATOM_CHANNEL=beta
+
 notifications:
   email:
     on_success: never
